# src/modules/diary/routes/diary.routes.ts
@@ -1,3 +1,4 @@
+import { use } from "@shared/helpers/utils";
 import express from "express";
 import {
   addFoodsToDiary,
@@ -10,14 +11,14 @@ import {
 
 export const diaryRouter = express.Router();
 
-diaryRouter.get("/", getDiary);
+diaryRouter.get("/", use(getDiary));
 
-diaryRouter.get("/:id", getDiaryById);
+diaryRouter.get("/:id", use(getDiaryById));
 
-diaryRouter.post("/", addNewDiaryEntry);
+diaryRouter.post("/", use(addNewDiaryEntry));
 
-diaryRouter.delete("/:id", deleteDiaryItemById);
+diaryRouter.delete("/:id", use(deleteDiaryItemById));
 
-diaryRouter.post("/:id/foods", addFoodsToDiary);
+diaryRouter.post("/:id/foods", use(addFoodsToDiary));
 
-diaryRouter.delete("/:id/foods/:foodId", deleteFoodDiaryItemById);
+diaryRouter.delete("/:id/foods/:foodId", use(deleteFoodDiaryItemById));
