# src/modules/foods/models/food-response.ts
@@ -1,4 +1,0 @@
-import { ApiResponse } from "@shared/models/api-response.model";
-import { Food } from "./food.model";
-
-export class FoodResponse extends ApiResponse<Food> {}
